--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,16 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'com.codeborne:selenide:6.17.2'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    //testImplementation 'org.slf4j-simple:2.0.3'
+    //testImplementation 'com.github.javafaker:javafaker:1.0.2'
     //testImplementation 'io.rest-assured:rest-assured:5.3.1'
     //testCompileOnly 'org.projectlombok:lombok:1.18.24'
     //testAnnotationProcessor 'org.projectlombbok:1.18.24'
-    //testRuntimeOnly 'org.slf4j-simple:2.0.3'
+
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_leak_detection=false")
 }
